Add support for filepath and disk image format on kubervirt, also added support for boot order
