# api/openapi-spec/swagger.json
@@ -3324,6 +3324,10 @@
       "description": "Attach a volume as a disk to the vm",
       "$ref": "#/definitions/v1.DiskTarget"
      },
+     "filePath": {
+      "description": "File path of the disk image file",
+      "type": "string"
+     },
      "floppy": {
       "description": "Attach a volume as a floppy to the vm",
       "$ref": "#/definitions/v1.FloppyTarget"
@@ -3346,6 +3350,10 @@
     "properties": {
      "bus": {
       "description": "Bus indicates the type of disk device to emulate.\nsupported values: virtio, sata, scsi, ide",
+      "type": "string"
+     },
+     "imageFormat": {
+      "description": "Image format",
       "type": "string"
      },
      "readonly": {
@@ -3382,6 +3390,10 @@
      "machine": {
       "description": "Machine type\n+optional",
       "$ref": "#/definitions/v1.Machine"
+     },
+     "os": {
+      "description": "Machine type\n+optional",
+      "$ref": "#/definitions/v1.OS"
      },
      "resources": {
       "description": "Resources describes the Compute Resources required by this vm.",
@@ -3802,6 +3814,15 @@
       "items": {
        "$ref": "#/definitions/v1.NodeSelectorRequirement"
       }
+     }
+    }
+   },
+   "v1.OS": {
+    "description": "OS allow specifying the boot order",
+    "properties": {
+     "bootorder": {
+      "description": "BootOrder specifies the boot order prority.",
+      "type": "string"
      }
     }
    },
